RESOLVED FIXED32891
Include stddef.h for ptrdiff_t
https://bugs.webkit.org/show_bug.cgi?id=32891
Summary Include stddef.h for ptrdiff_t
Kwang Yul Seo
Reported 2009-12-22 18:35:30 PST
[ 509/1814] cxx: JavaScriptCore\assembler\ARMAssembler.cpp -> build\default\JavaScriptCore\assembler\ARMAssembler_1.o "..\JavaScriptCore/jit/ExecutableAllocator.h", line 107: Error: #20: identifier "ptrdiff_t" is undefined if (static_cast<ptrdiff_t>(n) < (m_end - m_freePtr)) { ^ ..\JavaScriptCore\assembler\ARMAssembler.cpp: 0 warnings, 1 error In RVCT, ptrdiff_t is tyedefed in stddef.h, so we need to include stddef.h in JavaScriptCore/jit/ExecutableAllocator.h.
Attachments
Include stddef.h (1.11 KB, patch)
2009-12-22 18:39 PST, Kwang Yul Seo
darin: review-
Include stddef.h for ptrdiff_t without compiler guards (1.03 KB, patch)
2009-12-22 23:34 PST, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2009-12-22 18:39:28 PST
Created attachment 45413 [details] Include stddef.h
WebKit Review Bot
Comment 2 2009-12-22 18:42:59 PST
style-queue ran check-webkit-style on attachment 45413 [details] without any errors.
Darin Adler
Comment 3 2009-12-22 21:58:29 PST
Comment on attachment 45413 [details] Include stddef.h This include should not be inside an if statement. We should add <stddef.h> unconditionally for all compilers. It should be added to the main paragraph of includes at the top of the file.
Kwang Yul Seo
Comment 4 2009-12-22 23:34:29 PST
Created attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards
WebKit Review Bot
Comment 5 2009-12-22 23:36:35 PST
style-queue ran check-webkit-style on attachment 45420 [details] without any errors.
Laszlo Gombos
Comment 6 2009-12-23 09:34:32 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Looks good, r=me
WebKit Commit Bot
Comment 7 2009-12-23 09:37:55 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Rejecting patch 45420 from review queue. laszlo.1.gombos@nokia.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py. - If you have reviewer rights please correct the error in WebKitTools/Scripts/modules/committers.py by adding yourself to the file (no review needed) and then set the reviewer flag again. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags.
Laszlo Gombos
Comment 8 2009-12-23 15:36:12 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Try again, after I added myself to the reviewers list - http://trac.webkit.org/changeset/52531.
WebKit Commit Bot
Comment 9 2009-12-23 15:36:31 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Rejecting patch 45420 from review queue. laszlo.1.gombos@nokia.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py. - If you have reviewer rights please correct the error in WebKitTools/Scripts/modules/committers.py by adding yourself to the file (no review needed) and then set the reviewer flag again. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags.
Laszlo Gombos
Comment 10 2009-12-23 15:41:20 PST
hmm.. Maybe I wait a bit more to let the Commit Bot pick up the change.
Adam Barth
Comment 11 2009-12-23 15:44:07 PST
> hmm.. Maybe I wait a bit more to let the Commit Bot pick up the change. The commit bot won't land this because it's marked review-. You'll need to get a reviewer to change that flag to review+ first.
Eric Seidel (no email)
Comment 12 2009-12-23 15:52:15 PST
Sorry. Due to bug 30084 the commit-queue does not immediately notice changes to committers.py. I have filed bug 32911 as a workaround until bug 30084 can be fixed. Sorry again for the confusion. The commit-queue has been restarted and will now recognize your r+ correctly.
Laszlo Gombos
Comment 13 2009-12-23 17:08:41 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Thanks Eric.
WebKit Commit Bot
Comment 14 2009-12-23 18:15:53 PST
Comment on attachment 45420 [details] Include stddef.h for ptrdiff_t without compiler guards Clearing flags on attachment: 45420 Committed r52538: <http://trac.webkit.org/changeset/52538>
WebKit Commit Bot
Comment 15 2009-12-23 18:15:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.